fix design row layout on tablet screens

--- a/css/index.css
+++ b/css/index.css
@@ -263,6 +263,10 @@ body {
 
 #design > .mdl-grid {
     position: relative;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 
 #design-gallery {
